--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
 /*========== GOOGLE FONTS ==========*/
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
 
+@import url('https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&family=Oswald:wght@200..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&family=Oswald:wght@200..700&family=Ysabeau+SC:wght@1..1000&display=swap');
+
 /*========== VARIABLES CSS ==========*/
 :root {
   --header-height: 3.5rem;
@@ -10,19 +13,19 @@
   --first-color: #6923D0;
   --first-color-light: #F4F0FA;
   --title-color: #19181B;
-  --text-color: #58555E;
+  --text-color: #2d2c2e;
   --text-color-light: #A5A1AA;
-  --body-color: #F9F6FD;
+  --body-color: #e1f6fd;
   --container-color: #FFFFFF;
 
   /*========== Font and typography ==========*/
-  --body-font: 'Poppins', sans-serif;
+  --body-font: 'Ysabeau SC';
   --normal-font-size: .938rem;
   --small-font-size: .75rem;
   --smaller-font-size: .75rem;
 
   /*========== Font weight ==========*/
-  --font-medium: 500;
+  --font-medium: 700;
   --font-semi-bold: 600;
 
   /*========== z index ==========*/
@@ -32,7 +35,7 @@
 @media screen and (min-width: 1024px) {
   :root {
     --normal-font-size: 1rem;
-    --small-font-size: .875rem;
+    --small-font-size: .925rem;
     --smaller-font-size: .813rem;
   }
 }
@@ -132,7 +135,8 @@ img {
   height: 100vh;
   padding: 1rem 1rem 0;
   background-color: var(--container-color);
-  box-shadow: 1px 0 0 rgba(22, 8, 43, 0.1);
+  /* box-shadow: 1px 0 0 rgba(22, 8, 43, 0.1); */
+  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
   z-index: var(--z-fixed);
   transition: .4s;
 }
@@ -330,3 +334,134 @@ img {
     opacity: 1;
   }
 }
+
+
+/* dashboard card css start */
+.metric-card {
+    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+    width: 280px;
+    font-family: oswald;
+    padding: 1.5rem;
+    background: white;
+    border-radius: 8px;
+    /* box-shadow: 0 2px 4px rgba(0,0,0,0.1); */
+}
+
+.metric-label {
+    font-size: 0.875rem;
+    color: #6c757d;
+    text-transform: uppercase;
+    letter-spacing: 0.05em;
+    font-weight: 500;
+}
+
+.metric-value {
+    font-size: 1.875rem;
+    font-weight: 600;
+    margin: 0.25rem 0;
+}
+
+.metric-change {
+    font-size: 0.875rem;
+}
+
+.metric-change .negative {
+    color: #dc3545;
+}
+
+.icon-circle {
+    width: 40px;
+    height: 40px;
+    background-color: #fff3e6;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.icon-circle i {
+    color: #fd7e14;
+    font-size: 1.25rem;
+}
+/* dashboard card css end */
+
+/* content catd */
+.content-card{
+    box-shadow: rgb(38, 57, 77) 0px 10px 10px -4px;
+
+    padding: 5px 30px;
+    background-color:#ffffff !important;
+    border-radius: 12px;
+    border: 1px solid rgba(209, 213, 219, 0.3);
+
+}
+/* container-text  */
+.container-text h1{
+    font-weight: 600;
+    font-size: 2.0vw;
+    color: #2d2c2e;
+   text-align: center;
+}
+
+@media (max-width:767px){
+    .container-text h1{
+       font-size: 5vw;
+    }
+    .content-card{
+        padding: 5px 0px;
+    }
+    
+}
+table th{
+    font-size: 14px;
+}
+
+table td{
+    font-family: Oswald; 
+    font-size: 15px;   
+}
+thead{
+    background-color: #1a1a1a;
+    color: white;
+}
+
+
+
+.button {
+    --key-text-color: #2a2a2b;
+    --docsearch-key-shadow: inset 0 -2px 0 0 #cdcde6, inset 0 0 1px 1px #fff,
+      0 1px 2px 1px rgba(30, 35, 90, 0.4);
+    --docsearch-key-gradient: linear-gradient(-225deg, #d5dbe4, #f8f8f8);
+    border: none;
+    background: var(--docsearch-key-gradient);
+    border-radius: 3px;
+    box-shadow: var(--docsearch-key-shadow);
+    color: var(--key-text-color);
+    cursor: pointer;
+    height: 2.5em;
+    text-align: center;
+    padding: 0.6em;
+    margin: 0 0.6em;
+    display: inline-block;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 1em;
+    min-width: 1em;
+    line-height: 1em;
+    user-select: none;
+  }
+  
+
+   /* Custom transition for smooth opening */
+   .modal.fade .modal-dialog {
+    transform: translateY(-50px);
+    transition: transform 0.5s ease-in-out;
+  }
+
+  .modal.show .modal-dialog {
+    transform: translateY(0);
+  }
+
+  label{
+    font-weight: 600;
+  }
